Updated javascript projects with evenlisteners, foreachloop, arrow functions

--- a/JavaScript/Projects/Rock-Paper-Scissors/styles/main.css
+++ b/JavaScript/Projects/Rock-Paper-Scissors/styles/main.css
@@ -31,11 +31,15 @@ img {
     cursor: pointer;
 }
 
-.game-move-section, .current-game, .current-game-moves, .result-section {
+.game-move-section,
+.current-game,
+.current-game-moves,
+.result-section {
     margin-bottom: 30px;
 }
 
-.reset-score-button {
+.reset-score-button,
+.auto-play-button {
     border: none;
     padding: 10px 15px;
     font-size: 15px;
