added view resume section

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,8 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 20px;
 }
-.name-section {
+.name-section,
+.bio-section {
     margin-bottom: 0;
     padding: 10px 20px; /* Add padding for spacing */
     /* background: #333; */
@@ -56,8 +57,25 @@ hr {
     color: rgb(135, 135, 135);
 }
 
-.bio-section {
+/* .bio-section {
     margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+} */
+
+.resume {
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: hotpink;
+    color: white;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+}
+
+.resume:hover {
+    background-color: rgb(200, 105, 150);
 }
 
 .topic-section {
